--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@google/genai": "^1.39.0",
     "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "lucide-react": "^0.563.0",
-    "recharts": "^3.7.0",
-    "react-dom": "^19.2.4"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
